feat: added JWT
